[gd_scene load_steps=9 format=3 uid="uid://be8f8j1p4b8cx"]

[ext_resource type="Script" uid="uid://xmc4itnjal2a" path="res://Godot script/Scenes Script/home_page.gd" id="1_8unir"]
[ext_resource type="FontFile" uid="uid://docxxo2smmwtj" path="res://Fonts/Helvetica-Bold.ttf" id="2_3e5ya"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwahq"]
bg_color = Color(0, 0.0352941, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8unir"]
bg_color = Color(0, 0.113725, 0.247059, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h4cya"]
bg_color = Color(0.0392157, 0.431373, 0.827451, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p61cv"]
bg_color = Color(0.16043, 0.544711, 0.982296, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pekp"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_257lx"]
bg_color = Color(0, 0.113725, 0.247059, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8unir")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iwahq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="left_panel" type="Panel" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 648)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_8unir")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3e5ya")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/hover = SubResource("StyleBoxFlat_p61cv")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4cya")
text = "Profile"

[node name="Button2" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3e5ya")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/hover = SubResource("StyleBoxFlat_p61cv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4cya")
text = "Shop"

[node name="Button3" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3e5ya")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/hover = SubResource("StyleBoxFlat_p61cv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4cya")
text = "Inventory"

[node name="Button4" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3e5ya")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/hover = SubResource("StyleBoxFlat_p61cv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4cya")
text = "Leaderboards"

[node name="Button5" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3e5ya")
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/hover = SubResource("StyleBoxFlat_p61cv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h4cya")
theme_override_styles/normal = SubResource("StyleBoxFlat_h4cya")
text = "Settings"

[node name="middle_container" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(746, 0)
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="middle_panel" type="Panel" parent="HBoxContainer/middle_container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7pekp")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="right_panel" type="Panel" parent="HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 648)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_257lx")
